<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context="com.jeanandroid.kotlinbasico.actInformacoes">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/cadeira"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/aluno"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/nomealuno"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="170dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/notif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_weight="1"
                app:srcCompat="@drawable/notif" />

            <ImageView
                android:id="@+id/broadcast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_weight="1"
                app:srcCompat="@drawable/broadcast" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="110dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="160dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/notif"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="160dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/notifbroad"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="330dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mensagem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_weight="1"
                app:srcCompat="@drawable/mensagem" />

            <ImageView
                android:id="@+id/servico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_weight="1"
                app:srcCompat="@drawable/servico" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="110dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textodinamico"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="310dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textoservico"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="310dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/servico"
                android:textSize="18sp" />
        </LinearLayout>

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
